[metadata]
name = repop
version = attr: repop.VERSION
description = REPOP: Refinery Planning and Optimization
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy>=1.22
    scipy>=1.10
    pyomo>=6.6
    gurobipy>=12
    black>=22

[options.entry_points]
console_scripts =
    repop = repop.bin.main:main
