[metadata]
name = repop
version = attr: repop.VERSION
description = REPOP: Refinery Planning and Optimization
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    black>=22
    pyyaml>=6.0
    pydantic>=2.10
    numpy>=1.22
    pyomo>=6.6
    rich>=13.9
    graphviz>=0.20
    gurobipy>=12

[options.entry_points]
console_scripts =
    repop = repop.bin.main:main
